packages/components/src/styles/internal/_form-components.scss
/* ... */
@mixin get-validity($selector, $key: "valid") {
	$user: "";

	@if ($selector == check or $selector == switch) {
		$user: "user-";
	}

	@if ($selector == check or $selector == radio or $selector == switch) {
		$selector: input;

		&:has(
				#{$selector}:not(
						[data-custom-validity]
					):required:#{$user}#{$key}
			) {
			@content;
		}
		/* stylelint-disable-next-line at-rule-empty-line-before */
	} @else {
		@if ($selector == summary) {
			$selector: select;
		}

		#{get-validations($selector,$key)} {
			@content;
		}
	}

	// If data-custom-validity is set we overwrite the selectors above
	&:has(#{$selector}[data-custom-validity="#{$key}"]),
	&[data-custom-validity="#{$key}"] {
		@content;
	}
}

@mixin set-required-label($selector) {
	&:has(#{$selector}:required),
	&[data-required="true"] {
		&:is(label),
		> label {
			&::after {
				// We're using 1px instead of a token here on purpose, as this is an edge case
				/* stylelint-disable-next-line db-ux/use-spacings */
				padding-inline-start: 1px;

				@include icons.icon-content("*");
			}
		}
	}
}

@mixin set-default-form-component($selector) {
	@extend %db-overwrite-font-size-sm;
	@extend %helper-message;

	// base inline size for inputs without icons
	min-inline-size: $db-min-inline-size;

	/* stylelint-disable-next-line scss/selector-no-redundant-nesting-selector */
	& {
		--db-form-has-before: 0;
		// we use absolute icons
		position: relative;
		display: flex;
		flex-direction: column;
	}

	&[data-variant="floating"],
	&[data-hide-label="true"] {
		--db-label-visible-above: 0;
	}

	@include set-floating-label-overwrites($selector);
	@include set-required-label($selector);

	@include get-validity($selector) {
		&:has(
				> .db-infotext[data-semantic="successful"],
				> db-infotext > .db-infotext[data-semantic="successful"]
			) {
			@include get-validity-color($selector, "valid");
		}
	}

	@include get-validity($selector, "invalid") {
		@include get-validity-color($selector, "invalid");
	}

	@include placeholder-content($selector) {
		opacity: component.$placeholder-disabled;
		font-family: var(--db-font-family-sans);
		font-style: italic;
	}

	#{$selector} {
		@extend %db-overwrite-font-size-md;
		@extend %default-interactive-component;
		@extend %form-component-border;

		background-color: colors.$db-adaptive-bg-basic-transparent-semi-default;
		caret-color: colors.$db-adaptive-on-bg-basic-emphasis-100-default;
		appearance: none;
		max-inline-size: 100%;
		inline-size: 100%;
		min-inline-size: $db-min-inline-size;

		/* stylelint-disable-next-line db-ux/use-spacings */
		padding-inline: var(
				--db-form-component-padding-inline-start,
				#{variables.$db-spacing-fixed-sm}
			)
			var(
				--db-form-component-padding-inline-end,
				#{variables.$db-spacing-fixed-sm}
			);

		@include helpers.hover {
			background-color: colors.$db-adaptive-bg-basic-transparent-hovered;
		}

		&:is(input, textarea):not(:disabled):read-only {
			background-color: var(
				--db-textarea-read-only,
				#{colors.$db-adaptive-bg-basic-level-1-default}
			) !important;
		}
	}

	// label
	> label {
		@extend %db-overwrite-font-size-xs;

		padding-block-end: variables.$db-spacing-fixed-xs;
		max-inline-size: 25ch;
		text-overflow: ellipsis;
		white-space: nowrap;
		overflow: hidden;

		@media screen and (prefers-reduced-motion: no-preference) {
			transition: font-size variables.$db-transition-straight-emotional;
		}
	}

	&[data-hide-label="true"] {
		> label {
			@extend %a11y-visually-hidden;

			padding: 0;
		}
	}

	// disabled
	&:has(
			#{$selector}:disabled,
			#{$selector}[data-disabled="true"],
			#{$selector}[aria-disabled="true"]
		) {
		// Decided against cursor: not-allowed, compare to e.g. https://phabricator.wikimedia.org/T121960
		opacity: component.$default-disabled;
		pointer-events: none;
	}

	// icons
	&::after,
	&::before {
		position: absolute;
		pointer-events: none;
		inset-block-start: $icon-inline-block-start;
		color: colors.$db-adaptive-on-bg-basic-emphasis-100-default;
		transform: translateY(-50%);
		z-index: 1;
	}

	&::before {
		margin-inline-end: variables.$db-spacing-fixed-sm;
		inset-inline-start: variables.$db-spacing-fixed-sm;
	}

	&::after {
		margin-inline-start: variables.$db-spacing-fixed-sm;
		inset-inline-end: variables.$db-spacing-fixed-sm;
	}

	@if ($selector == input or $selector == select or $selector == summary) {
		#{$selector} {
			block-size: variables.$db-sizing-md;
			text-overflow: ellipsis;
		}
	}
}

@mixin get-validity-color-check-label-color($state, $key: "valid") {
	$variant: successful;

	@if ($key != "valid") {
		$variant: critical;
	}

	&:has(input:not([role="switch"])) {
		&:is(label),
		> label {
			color: var(--db-#{$variant}-on-bg-basic-emphasis-100-#{$state});
		}
	}
}

// CHECKBOX & RADIO

@mixin get-state($state: "hover") {
	$variant: "hovered";

	@if ($state != "hover") {
		$variant: "pressed";
	}

	&:has(input:#{$state}, > label:#{$state}, :is(label):#{$state}) {
		--db-check-element-label-color: var(
			--db-adaptive-on-bg-basic-emphasis-100-#{$variant}
		);

		&:is(label),
		> label {
			cursor: helpers.$cursor-pointer;
		}

		input {
			cursor: helpers.$cursor-pointer;
			background-color: var(
				--db-adaptive-bg-basic-transparent-#{$variant}
			);
			@content;
		}
	}
}
/* ... */

